上传后端代码和服务器相关配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,6 @@ node_modules/
 miniprogram_npm
 
 *.bat
-app/
-server/
+app/handlers/V1Picture.go
+app/handlers/V1UserUpdate.go
+server/nginx*.conf
