--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,34 +1,36 @@
 {
-  "lazyCodeLoading": "requiredComponents",
-  "pages": [
-    "pages/index/index",
-    "pages/user/user"
-  ],
-  "sitemapLocation": "sitemap.json",
-  "tabBar": {
-    "backgroundColor": "white",
-    "color": "#8c8c8c",
-    "list": [
-      {
-        "iconPath": "images/home-off.png",
-        "pagePath": "pages/index/index",
-        "selectedIconPath": "images/home-on.png",
-        "text": "首页"
-      },
-      {
-        "iconPath": "images/my-off.png",
-        "pagePath": "pages/user/user",
-        "selectedIconPath": "images/my-on.png",
-        "text": "我的"
-      }
-    ],
-    "selectedColor": "#749b15"
-  },
-  "window": {
-    "backgroundColor": "#F6F6F6",
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "瑜伽约课工具"
-  }
+	"lazyCodeLoading": "requiredComponents",
+	"pages": [
+
+		"pages/booking/booking",
+		"pages/index/index",
+		"pages/user/user"
+	],
+	"sitemapLocation": "sitemap.json",
+	"tabBar": {
+		"backgroundColor": "white",
+		"color": "#8c8c8c",
+		"list": [
+			{
+				"iconPath": "images/home-off.png",
+				"pagePath": "pages/index/index",
+				"selectedIconPath": "images/home-on.png",
+				"text": "首页"
+			},
+			{
+				"iconPath": "images/my-off.png",
+				"pagePath": "pages/user/user",
+				"selectedIconPath": "images/my-on.png",
+				"text": "我的"
+			}
+		],
+		"selectedColor": "#749b15"
+	},
+	"window": {
+		"backgroundColor": "#F6F6F6",
+		"backgroundTextStyle": "light",
+		"navigationBarBackgroundColor": "#F6F6F6",
+		"navigationBarTextStyle": "black",
+		"navigationBarTitleText": "瑜伽约课工具"
+	}
 }
