--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,10 +1,11 @@
 {
   "lazyCodeLoading": "requiredComponents",
   "pages": [
-    "pages/index/index",
-    "pages/market/market",
+    "pages/notices/notices",
     "pages/booked/booked",
     "pages/booking/booking",
+    "pages/index/index",
+    "pages/market/market",
     "pages/notice/notice",
     "pages/one/one",
     "pages/small/small",
