--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,12 +1,13 @@
 {
   "lazyCodeLoading": "requiredComponents",
   "pages": [
-    "pages/index/index",
-    "pages/notices/notices",
+    "pages/let baseUri = window.location.host === \"127.0.0.1:5500\" ? 'http://127.0.0.1:8081' : ''\r\n    const name = new URL(document.URL).searchParams.get('name') || '免费科学上网';\r\n    document.title = `${name} - ${document.title}`\r\n    async function loadData() {\r\n      const response = await fetch(`${baseUri}/v1/document?name=${encodeURIComponent(name)}`)\r\n      return response.text();\r\n    }\r\n    async function render() {\r\n      const wrapper = document.querySelector('.markdown');\r\n      let obj;\r\n      try {\r\n        obj = await loadData();\r\n\r\n\r\nrenderMarkdown\r\n        wrapper.innerHTML = markdownit({\r\n          html: true,\r\n          linkify: true,\r\n          typographer: true\r\n        }).render(obj);\r\n\r\n\r\n      } catch (error) {\r\n        console.log(error);\r\n      }\r\n    }\r\n    render();/let baseUri = window.location.host === \"127.0.0.1:5500\" ? 'http://127.0.0.1:8081' : ''\r\n    const name = new URL(document.URL).searchParams.get('name') || '免费科学上网';\r\n    document.title = `${name} - ${document.title}`\r\n    async function loadData() {\r\n      const response = await fetch(`${baseUri}/v1/document?name=${encodeURIComponent(name)}`)\r\n      return response.text();\r\n    }\r\n    async function render() {\r\n      const wrapper = document.querySelector('.markdown');\r\n      let obj;\r\n      try {\r\n        obj = await loadData();\r\n\r\n\r\nrenderMarkdown\r\n        wrapper.innerHTML = markdownit({\r\n          html: true,\r\n          linkify: true,\r\n          typographer: true\r\n        }).render(obj);\r\n\r\n\r\n      } catch (error) {\r\n        console.log(error);\r\n      }\r\n    }\r\n    render();",
     "pages/booked/booked",
     "pages/booking/booking",
+    "pages/index/index",
     "pages/market/market",
     "pages/notice/notice",
+    "pages/notices/notices",
     "pages/one/one",
     "pages/small/small",
     "pages/teacher/teacher",
