--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ app/handlers/V1Picture.go
 app/handlers/V1UserUpdate.go
 app/assets/*.exe
 server/nginx*.conf
-server/Yoga.service
+server/Yoga*.service
 app/assets/dataSourceName.txt
 server/Nginx
 server/Extension
