--- a/WebAssembly/weixin/Cargo.toml
+++ b/WebAssembly/weixin/Cargo.toml
@@ -12,3 +12,5 @@ crate-type = ["cdylib"]
 js-sys = "0.3.61"
 wasm-bindgen = "0.2.84"
 wasm-bindgen-futures = "0.4.34"
+
+chinese-lunisolar-calendar = "0.1.25"
