--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,3 +15,6 @@ reqwest = { version = "0.11", default-features = false, features = ["json", "rus
 image = {version="0.24.6"}
 imageproc = "0.23.0"
 rusttype = "0.9.3"
+
+chrono = "0.4.24"
+chrono-tz = "0.8.2"
